2005-09-21 Raphael Neider <rneider AT web.de>

	* device/include/pic16/pic18f1220.h,
	  device/lib/pic16/libdev/pic18f1220.c: added ECCPAS sfr and bitfield
	* device/lib/pic16/Makefile.rules: added missing opening paren
	* src/pic16/gen.c (pic16_genNot,pic16_genCpl): removed as these
	  are provided in genutils.c,
	  (genUminusFloat,genUminus,genCmpEq): added asserts on different
	  operand/result sizes,
	  (genCmp): assert on NULL pointers first, then check deref'ed values
	* src/pic16/genutils.c (pic16_genCpl): fixed for different operand/
	  result size

2005-09-18 Raphael Neider <rneider AT web.de>

	* src/pic16/gen.c (genFarPointerGet,genFarPointerSet): removed
	  as these are now unused,
	  (genPointerGet,genPointerSet): handle FPOINTERs like POINTERs
	* src/pic16/pcode.c (pic16_symIsSpecial): assume REG_TMPs to be
	  local, avoids uninitialized pointer dereference on r->name
	* src/pic16/ralloc.c (newReg): fixed indentation

2005-09-13 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCval.c (constVal): fixed bug 730366
	* support/Util/SDCCerr.c,
	* support/Util/SDCCerr.h: added warning W_INVALID_INT_CONST

2005-09-10 Maarten Brock <sourceforge.brock AT dse.nl>

	* as/mcs51/lkmem.c (summary2): fixed report for absolute areas (bug 1210220)

2005-09-09 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/peeph.def (241.x): fixed bug when comparing generic pointers

2005-09-08 Maarten Brock <sourceforge.brock AT dse.nl>

	* as/hc08/lkaomf51.c (OutputName): made name unsigned char,
	  (hex2dec): made hex_digit unsigned char, removed ascii dependance
	* as/mcs51/lkaomf51.c (OutputName): made name unsigned char,
	  (hex2dec): made hex_digit unsigned char, removed ascii dependance
	* as/mcs51/lkarea.c (lnkarea2): sort absolute areas to the front
	* packihx/packihx.c (hexDigit): made c unsigned char
	* as/mcs51/lklibr.c (fndsym),
	* link/z80/lkgb.c (gb),
	* link/z80/lklibr.c (fndsym),
	* link/z80/lkrloc.c (relr),