@@ -1,3 +1,9 @@
+2005-09-22 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* src/mcs51/gen.c (genMinus): fix for undetected bug introduced 3 months
+	  ago by me
+	* support/regression/tests/addsub.c: added test for the bug
+
 2005-09-21 Raphael Neider <rneider AT web.de>
 
 	* device/include/pic16/pic18f1220.h,
